feat: add get take a book, give the book, get list of users with books, get list of users with count of books for last 30 days
