# internal/model/jwt.go
@@ -3,7 +3,7 @@ package model
 import "github.com/golang-jwt/jwt"
 
 type JWTClaim struct {
-	Username string
+	ID uint
 	jwt.StandardClaims
 }
 
