# transport/httpserver/routes.go
@@ -7,4 +7,10 @@ func (s *Server) SetupRoutes() {
 	s.App.POST("/user", s.handler.CreateUser)
 	s.App.POST("/auth", s.handler.Auth)
 	s.App.PUT("/user", s.handler.UpdatePassword, s.handler.JWT().ValidateAuth)
+	s.App.GET("/user", s.handler.GetUsersWithActiveBorrowedBooks)
+	s.App.GET("/user/count_books", s.handler.GetUsersWithBorrowedBookCountByDate)
+	s.App.POST("/book", s.handler.CreateBook)
+	s.App.GET("/book/:id/take", s.handler.TakeABook, s.handler.JWT().ValidateAuth)
+	s.App.GET("/book/:id/give", s.handler.GiveTheBook, s.handler.JWT().ValidateAuth)
+
 }
